Port v0.9.0 from 1.21.1